@@ -5,11 +5,12 @@ AC_SUBST([LIBWEBKITGTK_VERSION])
 AC_SUBST([LIBJAVASCRIPTCOREGTK_VERSION])
 AC_SUBST([LIBWEBKIT2GTK_VERSION])
 
+if test -z "$AR_FLAGS"; then
+    AR_FLAGS="cruT"
+fi
+
 DOLT
 AC_DISABLE_STATIC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
-if test -z "$AR_FLAGS"; then
-    AR_FLAGS="cruT"
-fi
